syntax = "proto3";

package main;
option go_package = "github.com/dmikey/go-vite-app/";

message API {
  message End_Points {
    string GetMetaData = 1;
  }

  End_Points EndPoints = 1;
}

message AppMeta {
  string name = 1; 
}
